@@ -58,11 +58,15 @@ public final class HttpDetailsFxController {
 
     private FormRenderer createForm(final XHttpComponentDTO httpComponent) {
         final var type = httpComponent.type;
+
+        // @formatter:off
         final var form = Form.of(
-                Section.of(initContextProperties(httpComponent).toArray(new Field[0]))
-                        .title("Servlet Context Properties"),
-                Section.of(initSpecificProperties(httpComponent).toArray(new Field[0])).title(type + " Properties"))
-                .title("Configuration Properties");
+                                Section.of(initContextProperties(httpComponent).toArray(new Field[0]))
+                                       .title("Servlet Context Properties"),
+                                Section.of(initSpecificProperties(httpComponent).toArray(new Field[0]))
+                                       .title(type + " Properties"))
+                             .title("Configuration Properties");
+       // @formatter:on
 
         final var renderer = new FormRenderer(form);
 
@@ -75,12 +79,19 @@ public final class HttpDetailsFxController {
     }
 
     private List<Field<?>> initContextProperties(final XHttpComponentDTO httpComponent) {
-        final Field<?> contextNameField      = Field.ofStringType(httpComponent.contextName).editable(false)
-                .label("Name");
-        final Field<?> contextPathField      = Field.ofStringType(httpComponent.contextPath).editable(false)
-                .label("Path");
+        // @formatter:off
+        final Field<?> contextNameField      = Field.ofStringType(httpComponent.contextName)
+                                                    .editable(false)
+                                                    .label("Name");
+
+        final Field<?> contextPathField      = Field.ofStringType(httpComponent.contextPath)
+                                                    .editable(false)
+                                                    .label("Path");
+
         final Field<?> contextServiceIdField = Field.ofIntegerType(Math.toIntExact(httpComponent.contextServiceId))
-                .editable(false).label("Service ID");
+                                                    .editable(false)
+                                                    .label("Service ID");
+        // @formatter:on
 
         return Arrays.asList(contextNameField, contextPathField, contextServiceIdField);
     }
@@ -98,61 +109,112 @@ public final class HttpDetailsFxController {
     }
 
     private List<Field<?>> initErrorPageProperties(final XHttpComponentDTO errrorPage) {
-        final Field<?> nameField           = Field.ofStringType(errrorPage.name).editable(false).label("Name");
-        final Field<?> asyncSupportedField = Field.ofBooleanType(errrorPage.asyncSupported).editable(false)
-                .label("Async Supported");
-        final Field<?> serviceIdField      = Field.ofIntegerType(Math.toIntExact(errrorPage.serviceId)).editable(false)
-                .label("Service ID");
-        final Field<?> infoField           = Field.ofStringType(errrorPage.servletInfo).editable(false).label("Info");
-        final Field<?> exceptionsField     = Field.ofMultiSelectionType(errrorPage.exceptions).label("Exceptions");
-        final Field<?> errorCodesField     = Field.ofMultiSelectionType(errrorPage.errorCodes).label("ErrorCodes");
+        // @formatter:off
+        final Field<?> nameField           = Field.ofStringType(errrorPage.name)
+                                                  .editable(false)
+                                                  .label("Name");
 
-        return Arrays.asList(nameField, asyncSupportedField, serviceIdField, infoField, exceptionsField,
-                errorCodesField);
+        final Field<?> asyncSupportedField = Field.ofBooleanType(errrorPage.asyncSupported)
+                                                  .editable(false)
+                                                  .label("Async Supported");
+
+        final Field<?> serviceIdField      = Field.ofIntegerType(Math.toIntExact(errrorPage.serviceId))
+                                                  .editable(false)
+                                                  .label("Service ID");
+
+        final Field<?> infoField           = Field.ofStringType(errrorPage.servletInfo)
+                                                  .editable(false)
+                                                  .label("Info");
+
+        final Field<?> exceptionsField     = Field.ofMultiSelectionType(errrorPage.exceptions)
+                                                  .label("Exceptions");
+
+        final Field<?> errorCodesField     = Field.ofMultiSelectionType(errrorPage.errorCodes)
+                                                  .label("ErrorCodes");
+        // @formatter:on
+        return List.of(nameField, asyncSupportedField, serviceIdField, infoField, exceptionsField, errorCodesField);
     }
 
     private List<Field<?>> initListenerProperties(final XHttpComponentDTO listener) {
-        final Field<?> serviceIdField = Field.ofIntegerType(Math.toIntExact(listener.serviceId)).editable(false)
-                .label("Service ID");
-        final Field<?> typesField     = Field.ofMultiSelectionType(listener.types).label("Types");
+        // @formatter:off
+        final Field<?> serviceIdField = Field.ofIntegerType(Math.toIntExact(listener.serviceId))
+                                             .editable(false)
+                                             .label("Service ID");
 
-        return Arrays.asList(serviceIdField, typesField);
+        final Field<?> typesField     = Field.ofMultiSelectionType(listener.types)
+                                             .label("Types");
+        // @formatter:on
+        return List.of(serviceIdField, typesField);
     }
 
     private List<Field<?>> initResourceProperties(final XHttpComponentDTO resource) {
-        final Field<?> prefixField    = Field.ofStringType(resource.prefix).editable(false).label("Prefix");
-        final Field<?> serviceIdField = Field.ofIntegerType(Math.toIntExact(resource.serviceId)).editable(false)
-                .label("Service ID");
-        final Field<?> patternsField  = Field.ofMultiSelectionType(resource.patterns).label("Patterns");
+        // @formatter:off
+        final Field<?> prefixField    = Field.ofStringType(resource.prefix)
+                                             .editable(false)
+                                             .label("Prefix");
 
-        return Arrays.asList(prefixField, serviceIdField, patternsField);
+        final Field<?> serviceIdField = Field.ofIntegerType(Math.toIntExact(resource.serviceId))
+                                             .editable(false)
+                                             .label("Service ID");
+
+        final Field<?> patternsField  = Field.ofMultiSelectionType(resource.patterns)
+                                             .label("Patterns");
+        // @formatter:on
+        return List.of(prefixField, serviceIdField, patternsField);
     }
 
     private List<Field<?>> initFilterProperties(final XHttpComponentDTO filter) {
-        final Field<?> nameField           = Field.ofStringType(filter.name).editable(false).label("Name");
-        final Field<?> asyncSupportedField = Field.ofBooleanType(filter.asyncSupported).editable(false)
-                .label("Async Supported");
-        final Field<?> serviceIdField      = Field.ofIntegerType(Math.toIntExact(filter.serviceId)).editable(false)
-                .label("Service ID");
-        final Field<?> servletNamesField   = Field.ofMultiSelectionType(filter.servletNames).label("Servlets");
-        final Field<?> regexsField         = Field.ofMultiSelectionType(filter.regexs).label("Regular Expressions");
-        final Field<?> dispatcherField     = Field.ofMultiSelectionType(filter.dispatcher).label("Dispatcher");
-        final Field<?> patternsField       = Field.ofMultiSelectionType(filter.patterns).label("Patterns");
+        // @formatter:off
+        final Field<?> nameField           = Field.ofStringType(filter.name)
+                                                  .editable(false)
+                                                  .label("Name");
 
-        return Arrays.asList(nameField, asyncSupportedField, serviceIdField, patternsField, servletNamesField,
-                regexsField, dispatcherField);
+        final Field<?> asyncSupportedField = Field.ofBooleanType(filter.asyncSupported)
+                                                  .editable(false)
+                                                  .label("Async Supported");
+
+        final Field<?> serviceIdField      = Field.ofIntegerType(Math.toIntExact(filter.serviceId))
+                                                  .editable(false)
+                                                  .label("Service ID");
+
+        final Field<?> servletNamesField   = Field.ofMultiSelectionType(filter.servletNames)
+                                                  .label("Servlets");
+
+        final Field<?> regexsField         = Field.ofMultiSelectionType(filter.regexs)
+                                                  .label("Regular Expressions");
+
+        final Field<?> dispatcherField     = Field.ofMultiSelectionType(filter.dispatcher)
+                                                  .label("Dispatcher");
+
+        final Field<?> patternsField       = Field.ofMultiSelectionType(filter.patterns)
+                                                  .label("Patterns");
+        // @formatter:on
+        return List.of(nameField, asyncSupportedField, serviceIdField, patternsField, servletNamesField, regexsField,
+                dispatcherField);
     }
 
     private List<Field<?>> initServletProperties(final XHttpComponentDTO servlet) {
-        final Field<?> nameField           = Field.ofStringType(servlet.name).editable(false).label("Name");
-        final Field<?> asyncSupportedField = Field.ofBooleanType(servlet.asyncSupported).editable(false)
-                .label("Async Supported");
-        final Field<?> serviceIdField      = Field.ofIntegerType(Math.toIntExact(servlet.serviceId)).editable(false)
-                .label("Service ID");
-        final Field<?> infoField           = Field.ofStringType(servlet.servletInfo).editable(false).label("Info");
-        final Field<?> patternsField       = Field.ofMultiSelectionType(servlet.patterns).label("Patterns");
+        // @formatter:off
+        final Field<?> nameField           = Field.ofStringType(servlet.name)
+                                                  .editable(false)
+                                                  .label("Name");
 
-        return Arrays.asList(nameField, asyncSupportedField, serviceIdField, infoField, patternsField);
+        final Field<?> asyncSupportedField = Field.ofBooleanType(servlet.asyncSupported)
+                                                  .editable(false)
+                                                  .label("Async Supported");
+
+        final Field<?> serviceIdField      = Field.ofIntegerType(Math.toIntExact(servlet.serviceId))
+                                                  .editable(false)
+                                                  .label("Service ID");
+
+        final Field<?> infoField           = Field.ofStringType(servlet.servletInfo)
+                                                  .editable(false)
+                                                  .label("Info");
+
+        final Field<?> patternsField       = Field.ofMultiSelectionType(servlet.patterns)
+                                                  .label("Patterns");
+        // @formatter:on
+        return List.of(nameField, asyncSupportedField, serviceIdField, infoField, patternsField);
     }
 
 }
